teeth gap fix

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,7 +17,7 @@
   main {
     position: absolute;
     bottom: 100px;
-    top: 100px;
+    top: 80px;
     display: flex;
     width: 100vw;
   }
